--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -26,7 +26,8 @@
 @import
   'components/button',
   'components/todolist',
-  'components/todoitem';
+  'components/todoitem',
+  'components/table';
 
 // 6. Page-specific styles
 @import
